# PEP-Project

./: .gitignore  index.html
day 8/: 1.ipynb  about.html  day1.py  day2.py  file_hand.py  index.html  index0.html  login.html  signup.html
day 8/port81/: index.html
day 8/port82/: 2.html
day10/: 1.ipynb  1.py
day11/: 1.py  2.py
day9/: index.html  sel.py
day_12/: 1.ipynb
day_15/: about.html  app.py
day_15/flaskpy/flaskpy/: app.py
day_15/flaskpy/flaskpy/static/js/: script.js
day_15/flaskpy/flaskpy/templates/: about.html  base.html  home.html  login.html  signup.html
day_15/static/: script.js  style.css
day_15/templates/: base.html  index.html  login.html  register.html
day_16/: app.py
day_16/day16/day16/: app.py
day_16/day16/day16/templates/: base.html  index.html  success.html
day_17/: app.py
day_7/: main.py
day_7/pro/: Readme.md  pyproject.toml
day_7/pro/sani/: sanit.py
project/: app.py
project/static/: style.css
project/templates/: base.html  contact.html  index.html  login.html
test_pypi/: 1.py
test_pypi/ascii_art_package/: LICENSE  README.md  pyproject.toml
test_pypi/ascii_art_package/ascii_art/: __init__.py  art.py
